@@ -1,61 +1,85 @@
 package org.example.message.service.impl;
 
-import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
+import org.example.commondto.UserDetailInfoEvent;
 import org.example.jwtcommon.jwt.JwtCommonService;
-import org.example.message.dto.MessageRequest;
-import org.example.message.dto.MessageResponse;
+import org.example.message.dto.request.MessageRequest;
+import org.example.message.dto.response.ChatResponse;
+import org.example.message.dto.response.MessageResponse;
+import org.example.message.dto.response.MessagesResponse;
+import org.example.message.dto.response.UserDetailsResponse;
 import org.example.message.entity.Message;
-import org.example.message.entity.User;
 import org.example.message.mapper.MessageMapper;
+import org.example.message.mapper.UserMapper;
 import org.example.message.repository.MessageRepository;
-import org.example.message.repository.UserRepository;
 import org.example.message.service.MessageService;
+import org.example.message.service.UserService;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
-import java.security.Principal;
-import java.util.Date;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class MessageServiceImpl implements MessageService {
-    private final JwtCommonService jwtCommonService;
     private final MessageRepository messageRepository;
-    private final UserRepository userRepository;
+    private final UserService userService;
 
 
     @Override
-    public List<MessageResponse> getMessages(String contactId, String currentUserId) {
+    public MessagesResponse getMessages(String contactId, String currentUserId) {
         List<Message> messages = messageRepository.findMessagesBetweenUsers(currentUserId, contactId);
-        return messages.stream().map(MessageMapper.INSTANCE::toMessageResponse).toList();
+        List<Message> unreadMessages = messages.stream()
+                .filter(message -> message.getReceiverId().equals(currentUserId) && !message.isRead())
+                .collect(Collectors.toList());
+
+        if (!unreadMessages.isEmpty()) {
+            unreadMessages.forEach(message -> message.setRead(true));
+            messageRepository.saveAll(unreadMessages);
+        }
+
+        UserDetailInfoEvent receiver = userService.getUserInfo(contactId);
+        UserDetailInfoEvent sender = userService.getUserInfo(currentUserId);
+        if(receiver == null || sender == null) {
+            throw new RuntimeException("User not found");
+        }
+        return new MessagesResponse(MessageMapper.INSTANCE.toMessageResponseList(messages), UserMapper.INSTANCE.toUserDetailsResponse(sender), UserMapper.INSTANCE.toUserDetailsResponse(receiver));
+    }
+
+    @Override
+    public Page<ChatResponse> getChats(String name, int page, int size) {
+        Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "lastMessageTime"));
+        return messageRepository.findChats(name, pageable);
+    }
+
+    @Override
+    public void markMessagesAsRead(List<String> messageIds, String currentUserId) {
+        List<Message> messages = messageRepository.findAllByUuidInAndReceiverId(messageIds, currentUserId);
+        if (messages.isEmpty()) {
+            throw new RuntimeException("No messages found or you are not authorized to mark them as read");
+        }
+        messages.forEach(message -> message.setRead(true));
+        messageRepository.saveAll(messages);
+
+        // Optionally, notify the sender(s) about read status
+//        messages.forEach(message -> {
+//            messagingTemplate.convertAndSendToUser(
+//                    message.getSenderId(),
+//                    "/queue/read-receipts",
+//                    new ReadReceipt(message.getUuid(), currentUserId)
+//            );
+//        });
     }
 
 
     @Override
     public MessageResponse createMessage(MessageRequest messageRequest, String senderId) {
-        Optional<User> senderOpt = userRepository.findUserByUuid(senderId);
-        Optional<User> receiverOpt = userRepository.findUserByUuid(messageRequest.getReceiverId());
-
-        if (senderOpt.isEmpty() || receiverOpt.isEmpty()) {
-            // Komunikacja z Kafka, jeśli użytkownik nie istnieje
-            // Możesz tutaj zaimplementować pobieranie użytkownika z innego modułu za pomocą Kafka
-            // Dla uproszczenia zakładamy, że użytkownik musi istnieć w bazie
-            throw new RuntimeException("User not found");
-        }
-
-        User sender = senderOpt.get();
-        User receiver = receiverOpt.get();
-
-        Message message = new Message();
-        message.setContent(messageRequest.getContent());
-        message.setSender(sender);
-        message.setReceiver(receiver);
-        message.setDateAdded(new Date());
-
-        messageRepository.save(message);
-
+        Message message = MessageMapper.INSTANCE.toMessage(messageRequest, senderId);
+        messageRepository.saveAndFlush(message);
         return MessageMapper.INSTANCE.toMessageResponse(message);
     }
 
@@ -63,11 +87,9 @@ public class MessageServiceImpl implements MessageService {
     public void deleteMessage(String messageId, String currentUserId) {
         Message message = messageRepository.findByUuid(messageId)
                 .orElseThrow(() -> new RuntimeException("Message not found"));
-
-        if (!message.getSender().getUuid().equals(currentUserId)) {
+        if (!message.getSenderId().equals(currentUserId)) {
             throw new RuntimeException("You are not authorized to delete this message");
         }
-
         messageRepository.delete(message);
     }
 }
